<resources>
    <string name="app_name">Vidacademica</string>
    <string name="name_app">VidAcadêmica</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="cellphone">Celular</string>
    <string name="birth_date">Data de nascimento</string>
    <string name="password_confirmation">Confirmação de senha</string>
    <string name="send_register">Enviar cadastro</string>
    <string name="create_register">Criar Cadastro</string>
    <string name="register">Cadastro</string>
    <string name="enter">Entrar</string>
    <string name="enter_google">Login Google</string>
    <string name="profile">Perfil</string>
    <string name="my_subjects">Minhas matérias</string>
    <string name="edit">Editar</string>
    <string name="update_register">Alterar cadastro</string>
    <string name="change_password">Trocar senha</string>
    <string name="title_activity_create_subject">createSubjectActivity</string>
    <string name="minimum_grade">Nota mínima</string>
    <string name="start_date">Data de início</string>
    <string name="rg">RG</string>
    <string name="new_password_confirmation">Confirmação da nova senha</string>
    <string name="new_password">Nova senha</string>
    <string name="current_password">Senha atual</string>
    <string name="description">Descrição</string>
    <string name="initial_date">Data inicial</string>
    <string name="final_date">Data final</string>
    <string name="subject">Matéria</string>
    <string name="title_register_subject">Cadastrar matéria</string>
    <string name="class_schedule">Horários da aula</string>
    <string name="add_class_schedule">Adicionar horário de aula</string>
    <string name="save_subject">Salvar matéria</string>
    <string name="login">Login</string>
    <string name="item_recicler_titulo_materia">Lógica de programação</string>
    <string name="item_periodo_date">06/19 - 01/20</string>
    <string name="title_activity_create_course">CreateCourseActivity</string>
    <string name="title_create_curso">Criar Curso</string>
    <string name="item_recycler_title_subject">TextViewTextViewTextViewTextViewTextViewTextView</string>
    <string name="item_period_date">06/19 – 01/20</string>
    <string name="save">Salvar</string>
    <string name="arrow_to_back">Arrow to back</string>
    <string name="students_photo">Students photo</string>
    <string name="a_woman_using_our_app">A woman using our app</string>
    <string name="add_icon">Add icon</string>
    <string name="from">De:</string>
    <string name="to">até:</string>
    <string name="icon_description">App icon</string>
    <string name="status">Status</string>
    <string name="red_ball">Red ball</string>
    <string name="title_create_class">Criar classe</string>
    <string name="subjects">Matérias</string>
    <string name="classes">Classes</string>
    <string name="title_registration">Associar aluno a classe</string>
    <string name="name_do_aluno">Nome do aluno</string>
    <string name="subtitle_registered_students">Alunos matriculados</string>
    <string name="user_date_of_birth">1978/11/16</string>
    <string name="my_scores">Minhas notas</string>
    <string name="item_score">nota_matéria</string>
    <string name="item_recycler_title_course">Lógica de programação</string>
    <string name="required_field">Campo obrigatório</string>
    <string name="invalid_email">Email inválido</string>
    <string name="invalid_phone_number">Número de celular inválido</string>
    <string name="invalid_name">Nome incompleto</string>
    <string name="birth_date_wrong">Sua idade deve ser superior a 8 anos</string>
    <string name="invalid_date">Data inválida</string>
    <string name="invalid_password">Senha inválida</string>
    <string name="not_equals_passwords">As senhas não coincidem</string>
    <string name="insufficient_age">Idade insuficiente</string>
    <string name="email_example">Ex.: nome@gmail.com</string>
    <string name="hint_name">Preencha nome e sobrenome, não abrevie</string>
    <string name="tip_password">Deve ter letras e números, de 8 a 10 dígitos</string>
    <string name="title_activity_list_my_tests">Meus Testes</string>
    <string name="title_activity_creste_test">Criar Teste</string>
    <string name="title_create_test">Criar Teste</string>
    <string name="btn_save_test">Salvar Teste</string>
    <string name="title_activity_set_result_test">setResultTestActivity</string>
    <string name="title_activity_teacher_home">TeacherHomeActivity</string>
</resources>
