<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.ui.RegisterUpdateUserActivity">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_view_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/short_size"
                android:contentDescription="@string/arrow_to_back"
                android:src="@drawable/ic_turn_back_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/default_size"
                android:fontFamily="@font/dosis_bold"
                android:gravity="end"
                android:text="@string/profile"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_primary_title" />

        </LinearLayout>

        <include
            android:id="@+id/layout_create_subject_content"
            layout="@layout/profile_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/short_size"
            app:layout_constraintBottom_toTopOf="@id/btn_change_register"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <Button
            android:id="@+id/btn_change_register"
            style="@style/AppTheme.Button.Blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_size"
            android:layout_marginEnd="@dimen/default_size"
            android:layout_marginBottom="@dimen/default_size"
            android:text="@string/update_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>