<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.CreateCourseActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="@dimen/default_size"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_name_class"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:errorEnabled="true"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linear_layout_start_final_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:layout_marginTop="@dimen/default_size"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_name_class">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_dt_start_class"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_start_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/initial_date"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_dt_final_class"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/little_size"
                    android:layout_weight="1"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_final_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/final_date"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/text_view_sujbjects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_size"
                android:fontFamily="@font/dosis_bold"
                android:text="@string/subjects"
                android:textSize="@dimen/font_secondary_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/spinner_list_subjects"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_start_final_date" />

            <Spinner
                android:id="@+id/spinner_list_subjects"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/spinner_border_input"
                android:entries="@array/subjects"
                android:layout_marginTop="@dimen/semi_short_size"
                android:paddingStart="@dimen/little_size"
                android:paddingTop="@dimen/semi_short_size"
                android:paddingEnd="@dimen/little_size"
                android:paddingBottom="@dimen/semi_short_size"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toBottomOf="@+id/text_view_sujbjects"/>

            <TextView
                android:id="@+id/text_view_status_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_size"
                android:fontFamily="@font/dosis_bold"
                android:text="@string/status"
                android:textSize="@dimen/font_secondary_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/input_status_course"
                app:layout_constraintTop_toBottomOf="@+id/spinner_list_subjects" />

            <Spinner
                android:id="@+id/input_status_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/semi_short_size"
                android:paddingStart="@dimen/little_size"
                android:paddingTop="@dimen/semi_short_size"
                android:paddingEnd="@dimen/little_size"
                android:paddingBottom="@dimen/semi_short_size"
                android:entries="@array/status"
                android:background="@drawable/course_spinner_border_input"
                app:layout_constraintTop_toBottomOf="@+id/text_view_status_course"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>